<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="expand1"
                    android:padding="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/layout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_1"
                            android:textColor="@color/banner1"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_1"
                            android:textSize="12sp"
                            android:visibility="gone"
                            android:gravity="left"
                            android:lineSpacingExtra="4dp"/>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="expand2"
                    android:padding="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/layout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_2"
                            android:textColor="@color/banner1"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_2"
                            android:textSize="12sp"
                            android:visibility="gone"
                            android:gravity="left"
                            android:lineSpacingExtra="4dp"/>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="expand3"
                    android:padding="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/layout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_3"
                            android:textColor="@color/banner1"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_3"
                            android:textSize="12sp"
                            android:visibility="gone"
                            android:gravity="left"
                            android:lineSpacingExtra="4dp"/>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="expand4"
                    android:padding="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/layout4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_4"
                            android:textColor="@color/banner1"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_4"
                            android:textSize="12sp"
                            android:visibility="gone"
                            android:gravity="left"
                            android:lineSpacingExtra="4dp"/>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="expand5"
                    android:padding="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/layout5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_5"
                            android:textColor="@color/banner1"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_5"
                            android:textSize="12sp"
                            android:visibility="gone"
                            android:gravity="left"
                            android:lineSpacingExtra="4dp"/>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="expand6"
                    android:padding="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/layout6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_6"
                            android:textColor="@color/banner1"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_6"
                            android:textSize="12sp"
                            android:visibility="gone"
                            android:gravity="left"
                            android:lineSpacingExtra="4dp"/>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="expand7"
                    android:padding="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/layout7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_7"
                            android:textColor="@color/banner1"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_7"
                            android:textSize="12sp"
                            android:visibility="gone"
                            android:gravity="left"
                            android:lineSpacingExtra="4dp"/>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>